# insightx-analytics

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
data/: .gitkeep  transactions.csv
src/: __init__.py  app.py
src/components/: __init__.py  alert_banner.py  analytics.py  charts.py  dashboard.py  filters.py  insight_card.py  reports.py  sidebar.py
src/models/: __init__.py  schemas.py
src/pages/: __init__.py  analytics.py  chat_history.py  dashboard.py  reports.py
src/services/: __init__.py  data_service.py
src/utils/: __init__.py  data_generator.py  helpers.py  styles.py
