[pyproject.toml]
[tool.poetry]
name = "insightx-leadership-analytics"
version = "0.1.0"
description = "A Streamlit application for leadership analytics."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.0"
pandas = "^1.3"
plotly = "^5.0"
faker = "^9.0"
numpy = "^1.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"